<resources>
    <string name="app_name">Fake GPS</string>
    <string name="app_version">0.1</string>

    <string name="gitHubUrl">https://github.com/BlackGhost0051</string>
    <string name="gitHubRepoUrl">https://github.com/BlackGhost0051/FakeGPS</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="menu_map">Map</string>
    <string name="menu_script">Script</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>

    <string name="info_description">A simple Android app to spoof your GPS location. Set any location on the map or run automated movement scripts.</string>
    <string name="info_version_label">Version</string>
    <string name="info_developer_label">Developer</string>
    <string name="info_developer_name">BlackGhost</string>
    <string name="info_github_label">GitHub</string>
    <string name="info_repo_label">Repository</string>
    <string name="info_opensource_label">Open Source</string>
    <string name="info_opensource_value">Yes</string>
    <string name="info_section_about">About</string>
    <string name="info_section_links">Links</string>


    <string name="script_start_button">Start</string>
    <string name="script_default_location">!23.456, 123.456</string>

    <string name="map_my_location_btn_description">My location</string>
    <string name="map_search_hint">Search location…</string>

    <string name="toast_test">TEST----IN</string>
    <string name="toast_set_location">SetLocation</string>
    <string name="toast_location_not_found">Location not found</string>
    <string name="toast_error_finding_location">Error finding location</string>
    <string name="toast_location_permission_required">Location permission required!</string>
    <string name="toast_unable_to_retrieve_location">Unable to retrieve current location</string>

    <string name="preferences_language_title">Language</string>
    <string name="preferences_language_summary">Choose your preferred language</string>
    <string name="language_system_default">System default</string>
    <string name="preferences_dark_theme_title">Dark theme</string>
    <string name="preferences_dark_theme_summary">Switch between light and dark mode.</string>
    <string name="preferences_save_map_title">Save map</string>
    <string name="preferences_save_map_summary">Save last position, zoom and rotation.</string>
</resources>