<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        app:title="@string/app_name"
        />


    <PreferenceCategory app:title="@string/menu_settings">
        <SwitchPreference
            android:key="dark_theme"
            app:title="@string/preferences_dark_theme_title"
            app:summary="@string/preferences_dark_theme_summary"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Map">
        <SwitchPreference
            android:key="save_map"
            app:title="@string/preferences_save_map_title"
            app:summary="@string/preferences_save_map_summary"
            app:defaultValue="false"
            />
    </PreferenceCategory>


    <!--

    1. Update the GPS time | default value 2500
    2. Save last position zoom rotation in map | default value TRUE
    3. Message ( Info about position ) | default value FALSE ?

    -->
</PreferenceScreen>
