<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@drawable/map_24"
            android:title="@string/menu_map"
            />


        <item android:title="App">
            <menu>
                <item
                    android:icon="@drawable/settings_24"
                    android:id="@+id/settings"
                    android:title="@string/menu_settings"
                    />
                <item
                    android:icon="@drawable/info_24"
                    android:id="@+id/info"
                    android:title="@string/menu_info"
                    />
            </menu>
        </item>

    </group>

</menu>